--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
     "expo-image-picker": "~8.3.0",
+    "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.9.0",
@@ -24,6 +25,7 @@
     "react-native-elements": "^2.3.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
