--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -19,6 +19,7 @@
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.9.0",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "~16.11.0",
     "react-native": "0.62.2",
